--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "firebase": "^9.23.0",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "firebase-admin": "^11.9.0",
+    "next": "^13.4.7",
+    "next-firebase-auth": "^1.0.0-canary.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "use-places-autocomplete": "^4.0.0"
   },
@@ -29,6 +31,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   }
 }
