--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.1",
-    "use-places-autocomplete": "^4.0.0"
+    "use-places-autocomplete": "^4.0.0",
+    "@import": "css-writing-mode"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
@@ -30,8 +31,10 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
+    "css-writing-mode": "^1.0.6",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-writing-mode": "^1.0.0",
     "typescript": "^5.1.6"
   }
 }
