--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@nextui-org/react": "^2.0.9",
     "@react-google-maps/api": "^2.18.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
-    "next": "^13.4.7",
+    "next": "^13.4.13",
     "next-firebase-auth": "^1.0.0-canary.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
