--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@nextui-org/react": "^2.0.9",
     "@react-google-maps/api": "^2.18.1",
+    "bootstrap": "^5.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "firebase": "^9.23.0",
